Initial commit - added register rest service
Added register page.

Added UserRole enum.

Partial register service functionality.

Added password hash functionality.

Added password hash functionality and minor fixes.

Added Spring security.

Added JS password match validation.

Fixed javascript code.

Created theatre entities

Minor additions.

Minor additions

HTML and js fixes.

Added redirect to homepage.

Minor fixes

Fixed email validation and added redirect service.

Fixed javascript and added redirect

Fixed typo

--- a/otheatre/src/main/resources/templates/register.html
+++ b/otheatre/src/main/resources/templates/register.html
@@ -37,7 +37,7 @@ and open the template in the editor.
 			    			</div>
 
 			    			<div class="form-group">
-			    				<input type="email" name="email" id="email" class="form-control input-sm" placeholder="Email Address">
+			    				<input type="email" required=true name="email" id="email" class="form-control input-sm" placeholder="Email Address">
 			    			</div>
 
 			    			<div class="row">
@@ -54,7 +54,7 @@ and open the template in the editor.
 			    			</div>
 			    			
 			    			<input type="submit" value="Register" class="btn btn-info btn-block" id="register_button">
-			    		
+                                                <div id="form_output"></div>
 			    		</form>
 			    	</div>
 	    		</div>
