--- a/otheatre/src/main/resources/templates/register_confirmation.html
+++ b/otheatre/src/main/resources/templates/register_confirmation.html
@@ -29,37 +29,8 @@ and open the template in the editor.
         		<div class="panel-heading">
 			    		<h3 class="panel-title">Orange Theatre Registration <small>It's free!</small></h3>
 			 			</div>
-			 			<div class="panel-body">
-                                                    <form role="form" method="post">
-			    			<div class="row">
-			    				<div class="col-xs-6 col-sm-6 col-md-6">
-
-			    				</div>
-			    				<div class="col-xs-6 col-sm-6 col-md-6">
-
-			    				</div>
-			    			</div>
-
-			    			<div class="form-group">
-			    				<input type="email" name="email" id="email" class="form-control input-sm" placeholder="Email Address">
-			    			</div>
-
-			    			<div class="row">
-			    				<div class="col-xs-6 col-sm-6 col-md-6">
-			    					<div class="form-group">
-			    						<input type="password" name="password" id="password" class="form-control input-sm" placeholder="Password">
-			    					</div>
-			    				</div>
-			    				<div class="col-xs-6 col-sm-6 col-md-6">
-			    					<div class="form-group">
-			    						<input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-sm" placeholder="Confirm Password">
-			    					</div>
-			    				</div>
-			    			</div>
-			    			
-			    			<input type="submit" value="Register" class="btn btn-info btn-block">
-			    		
-			    		</form>
+			 			<div class="panel-body" th:text="'Utilizatorul cu email-ul ' + ${email} + ' a fost creat cu succes'">Utilizatorul nu a putut fi creat.
+                                                    
 			    	</div>
 	    		</div>
     		</div>
