--- a/otheatre/src/main/resources/templates/register.html
+++ b/otheatre/src/main/resources/templates/register.html
@@ -19,6 +19,7 @@ and open the template in the editor.
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+        <script src="/register.js"></script>
     </head>
     <body>
         
@@ -57,7 +58,7 @@ and open the template in the editor.
 			    				</div>
 			    			</div>
 			    			
-			    			<input type="submit" value="Register" class="btn btn-info btn-block">
+			    			<input type="submit" value="Register" class="btn btn-info btn-block" id="register_button">
 			    		
 			    		</form>
 			    	</div>
@@ -65,5 +66,6 @@ and open the template in the editor.
     		</div>
     	</div>
     </div>
+    
     </body>
 </html>
