--- a/otheatre/src/main/resources/templates/homePage.html
+++ b/otheatre/src/main/resources/templates/homePage.html
@@ -1,54 +1,87 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Welcome, user!</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+    <title>Welcome, user!</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 </head>
 <body>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="#">OTheatreApp</a>
-  <ul class="navbar-nav">
-    <li class="nav-item active">
-      <a class="nav-link" href="#">Upcoming events</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="C:\Users\alexandru.busurca\Desktop\StartIT Extras\Internship work\loginPage.html">Profile</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">ManageEvents</a>
-    </li>
-	<li class="nav-item">
-      <a class="nav-link" href="#">Admin</a>
-    </li>
-	<li class="nav-item">
-      <a class="nav-link" href="#">Past events</a>
-    </li>
-  </ul>
+    <a class="navbar-brand" th:href="@{/}">Orange TheatreApp</a>
+    <ul class="navbar-nav">
+        <li class="nav-item active">
+            <a class="nav-link" href="#">Upcoming events</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" th:href="@{/profile}">Profile</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">ManageEvents</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Admin</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Past events</a>
+        </li>
+        <li class="nav-item" sec:authorize="isAuthenticated()">
+            <span style="color: white;" th:text="Welcome +   ${principal.email}"></span>
+        </li>
 
-	<form class="form-inline" action="/action_page.php">
-		<label for="email" class = "text-white">Email address:</label>
-			<input type="email" class="form-control form-control-sm" id="email">
-		<label for="pwd" class = "text-white">Password:</label>
-			<input type="password" class="form-control form-control-sm" id="pwd">
-		<button type="submit" class="btn btn-primary btn-sm">Login</button>
-	</form>
+    </ul>
 
+    <ul>
+        <div class="navbar-form navbar-right">
+            <div sec:authorize="isAuthenticated()">
+
+                <a class="btn btn-success"th:href="@{/logout}">Log out </a>
+
+            </div>
+
+            <div sec:authorize="isAnonymous()">
+                <a class="btn btn-success" th:href="@{/login}">Login</a>
+                <a class="btn btn-primary" th:href="@{/register}">Register</a>
+            </div>
+        </div>
+
+    </ul>
+    <!--<ul class="nav navbar-nav navbar-right">-->
+        <!--&lt;!&ndash;<span th:text="Welcome ${email}"></span>&ndash;&gt;-->
+
+        <!--<li sec:authorize="isAnonymous()">-->
+            <!--<a th:href="@{/login}">-->
+                <!--<span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>&nbsp;Log in-->
+            <!--</a>-->
+        <!--</li>-->
+        <!--<li sec:authorize="isAnonymous()">-->
+            <!--<a th:href="@{/register}">-->
+                <!--<span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>&nbsp;Register-->
+            <!--</a>-->
+        <!--</li>-->
+        <!--<li sec:authorize="isAuthenticated()">-->
+            <!--<form role="form" method="post" th:action="@{/logout}">-->
+                <!--<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>&nbsp;-->
+                <!--<button type="submit">Logout</button>-->
+            <!--</form>-->
+        <!--</li>-->
+    <!--</ul>-->
 </nav>
 
 <div class="container">
-<p>
-  <ul class="list-group">
-  <li class="list-group-item">Event1</li>
-  <li class="list-group-item">Event2</li>
-  <li class="list-group-item">Event3</li>
-</ul>
+    <p>
+    <ul class="list-group">
+        <li class="list-group-item">Event1</li>
+        <li class="list-group-item">Event2</li>
+        <li class="list-group-item">Event3</li>
+    </ul>
 </div>
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 
 </body>
 </html>
