The welcome text in the navbar looks better
Deleted ThymeleafConfig as it was not needed and added functionality tocheck user name against the db at login

Changed the password encrypter to use spring bcrypt

1. In TheatreSecurityConfiguration the getPasswordEncoder uses the same spring BCrypt method
2. just some empty lines in LoginController
3. removed register.js as the e-mail validation is done in the html and i moved the password matching javascript in the html also as there were only a few lines
4. Now, when trying to login, if bad credentials are used the message Invalid username or password is shown
5. register.html now contains the js for password checking

moved js code from html template to own js file

after registration the user is logged in

--- a/otheatre/src/main/resources/templates/homePage.html
+++ b/otheatre/src/main/resources/templates/homePage.html
@@ -26,11 +26,15 @@
         <li class="nav-item">
             <a class="nav-link" href="#">Past events</a>
         </li>
-        <li class="nav-item" sec:authorize="isAuthenticated()">
-            <span style="color: white;" th:text="Welcome +   ${principal.email}"></span>
-        </li>
-
     </ul>
+
+    <div sec:authorize="isAnonymous()">
+        <span style="color:white">Welcome! Login or register to be able to buy tickets and more.</span>
+    </div>
+
+    <div sec:authorize="isAuthenticated()">
+        <span style="color:white" th:text="'Welcome '+ ${principal.email}+'!'"></span>
+    </div>
 
     <ul>
         <div class="navbar-form navbar-right">
