--- a/otheatre/src/main/resources/templates/loginPage.html
+++ b/otheatre/src/main/resources/templates/loginPage.html
@@ -27,6 +27,12 @@ and open the template in the editor.
                 <div class="panel-body">
                     <form role="form" method="post">
 
+                        <div th:if="${param.error}">
+                            <div class="alert alert-danger">
+                                Invalid username or password.
+                            </div>
+                        </div>
+
                         <div class="form-group">
                             <input type="email" required=true name="email" id="email" class="form-control input-sm"
                                    placeholder="Email Address">
