--- a/otheatre/src/main/resources/templates/register.html
+++ b/otheatre/src/main/resources/templates/register.html
@@ -37,7 +37,7 @@ and open the template in the editor.
                         </div>
 
                         <div class="form-group">
-                            <input type="email" required=true name="email" id="email" class="form-control input-sm"
+                            <input type="email" required name="email" id="email" class="form-control input-sm"
                                    placeholder="Email Address">
                         </div>
 
@@ -51,8 +51,7 @@ and open the template in the editor.
                             <div class="col-xs-6 col-sm-6 col-md-6">
                                 <div class="form-group">
                                     <input type="password" name="password_confirmation" id="password_confirmation"
-                                           class="form-control input-sm" placeholder="Confirm Password">
-                                </div>
+                                           class="form-control input-sm" placeholder="Confirm Password" oninput="check(this)" required></div>
                             </div>
                         </div>
 
