1. added templates for admin page and access-denied page(for when a user with no admin rights tries to access the admin page) 2. in the homePage the link to admin in the navbar now points to the admin page 3. In TheatreSecurityConfiguration - moved the admin antmatcher first and switched from hasAuthority to hasRole 4. the AdminController checks the role of the current user and if it's admin it shows the admin page, else the access denied page 5. code tidying in the other files
The admin page shows the list of users and their role

Implemented basic admin feature to change user roles; Updated db schema regarding entities like hall and id

Started working at manage events feature

--- a/otheatre/src/main/resources/templates/homePage.html
+++ b/otheatre/src/main/resources/templates/homePage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <title>Welcome, user!</title>
     <meta charset="utf-8">
@@ -18,10 +19,10 @@
             <a class="nav-link" th:href="@{/profile}">Profile</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">ManageEvents</a>
+            <a class="nav-link" th:href="@{/manageEvents}">ManageEvents</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Admin</a>
+            <a class="nav-link" th:href="@{/admin}">Admin</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">Past events</a>
@@ -74,12 +75,24 @@
 </nav>
 
 <div class="container">
-    <p>
-    <ul class="list-group">
-        <li class="list-group-item">Event1</li>
-        <li class="list-group-item">Event2</li>
-        <li class="list-group-item">Event3</li>
-    </ul>
+    <h2>Events List</h2>
+    <table class="table table-striped">
+        <tr>
+            <th>Event title</th>
+            <th>Event description</th>
+            <th>Event start date</th>
+            <th>Event end date</th>
+            <th>Hall name</th>
+        </tr>
+        <tr th:each="event : ${events}">
+            <td th:text="${event.eventTitle}">event title</td>
+            <td th:text="${event.eventDescription}">event description</td>
+            <td th:text="${event.eventStartDate}">event start date</td>
+            <td th:text="${event.eventEndDate}">event end date</td>
+            <td th:text="${event.halls[0].hallName}">event hall name</td>
+            <!--<td th:text="${event.hall.hallName}">event hall</td>-->
+        </tr>
+    </table>
 </div>
 
 
