1.chek slot availability alorithm done 2.top navbar shows on all pages 3.ADMIN cannot change his role 4.removed repositories from controller classes

--- a/otheatre/src/main/resources/templates/adminPage.html
+++ b/otheatre/src/main/resources/templates/adminPage.html
@@ -22,13 +22,14 @@
             <th>Apply changes</th>
         </tr>
         <tr th:each="user : ${users}">
+
             <form th:action="@{/admin/ChangeRole}" th:method="PUT">
                 <td th:text="${user.userId}"></td>
                 <input type="hidden" name="forEmail" id="forEmail" th:value="${user.email}">
                 <td th:text="${user.email}" th:value="${user.email}"></td>
                 <td th:text="${user.role}"></td>
                 <td th:object="${userRole}" th:value="${userRole}">
-                    <select name ="newRole" id="newRole">
+                    <select th:if = "!${#strings.equals(user.role, 'ADMIN')}" name="newRole" id="newRole">
                         <option th:each="userRole : ${userRoles}"
                                 th:value="${userRole}"
                                 th:text="${userRole}">
@@ -36,10 +37,10 @@
                     </select>
                 </td>
                 <td>
-                    <button type="submit">Submit</button>
-
+                    <button th:if = "!${#strings.equals(user.role, 'ADMIN')}" type="submit">Submit</button>
                 </td>
             </form>
+
         </tr>
 
     </table>
