--- a/otheatre/src/main/resources/templates/fragments/header.html
+++ b/otheatre/src/main/resources/templates/fragments/header.html
@@ -6,6 +6,20 @@
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark" th:fragment="header">
     <a class="navbar-brand" th:href="@{/}">OTheatreApp</a>
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" th:href="@{/}">Upcoming events</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" th:href="@{/profile}">Profile</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" th:href="@{/manageEvents}">ManageEvents</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" th:href="@{/admin}">Admin</a>
+        </li>
+    </ul>
 </nav>
 
 
