Revert "Partial work"

--- a/otheatre/src/main/resources/templates/manageEvents.html
+++ b/otheatre/src/main/resources/templates/manageEvents.html
@@ -42,7 +42,7 @@
 <hr/>
 
 <div>
-    <h1>Add a new event</h1>
+    <h1>Form</h1>
     <form action="#" th:action="@{/manageEvents/addEvent}" th:object="${eventToAdd}" method="post">
         <p>Event title: <input type="text" th:field="*{eventTitle}"/></p>
         <p>Event description: <input type="text" th:field="*{eventDescription}"/></p>
