--- a/otheatre/src/main/resources/templates/fragments/header.html
+++ b/otheatre/src/main/resources/templates/fragments/header.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-
-</head>
+<head></head>
 <body>
 
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark" th:fragment="header">
     <a class="navbar-brand" th:href="@{/}">OTheatreApp</a>
 </nav>
+
 
 </body>
 </html>
