Implemented first step of review functionality
Intermediary commit

Intermediary work on review page.

Review page done, without star rating. Ratimg must be passed as a number from 1 to 5

Final version of review page

--- a/otheatre/src/main/resources/templates/event.html
+++ b/otheatre/src/main/resources/templates/event.html
@@ -50,6 +50,9 @@
             <td th:text="${review.userScore}">Score</td>
             <td th:text="${review.writtenReview}">Review</td>
         </tr>
+        <tr th:if="${displayReview} == true">
+            <th><a th:href="@{'/review/' + ${event.eventId}}">Add review</a></th>
+        </tr>
     </table>
 </div>
 
